--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="slides/0.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/1.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/2.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/3.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/4.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/5.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/6.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/7.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
+				<section data-markdown="slides/8.md" data-separator-vertical="^\n\n" data-separator-notes="^~Notes:"></section>
 			</div>
 		</div>
 
